# open-agent-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_simple_query.py  02_multi_tool.py  03_multi_turn.py  04_custom_tools.py  04_prompt_api.py  05_custom_system_prompt.py  05_permissions.py  06_mcp_server.py  06_session_persistence.py  07_custom_tools.py  08_official_api_compat.py  09_subagents.py  10_permissions.py  11_custom_mcp_tools.py  12_skills.py  13_hooks.py  14_openai_compat.py
examples/web/: index.html  server.py
src/open_agent_sdk/: __init__.py  agent.py  engine.py  hooks.py  sdk_mcp_server.py  session.py  tool_helper.py  types.py
src/open_agent_sdk/mcp/: __init__.py  client.py
src/open_agent_sdk/providers/: __init__.py  anthropic_provider.py  factory.py  openai_provider.py  types.py
src/open_agent_sdk/skills/: __init__.py  registry.py  types.py
src/open_agent_sdk/tools/: __init__.py  agent_tool.py  ask_user.py  bash.py  config_tool.py  cron_tools.py  edit.py  glob_tool.py  grep.py  lsp_tool.py  mcp_resource_tools.py  notebook_edit.py  plan_tools.py  read.py  send_message.py  skill_tool.py  task_tools.py  team_tools.py  todo_tool.py  tool_search.py  web_fetch.py  web_search.py  worktree_tools.py  write.py
src/open_agent_sdk/utils/: __init__.py  compact.py  context.py  retry.py  (+3 more)
tests/: test_agent.py  test_compact.py  test_context.py  test_engine.py  test_file_cache.py  test_hooks.py  test_mcp.py  test_messages.py  test_providers.py  test_retry.py  test_sdk_mcp_server.py  test_session.py  test_skills.py  test_tokens.py  test_tool_helper.py  test_tools.py  test_types.py
(+6 files in other folders)
