[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent-sdk"
version = "0.1.0"
description = "Open-source Agent SDK for Python. Runs the full agent loop in-process - no local CLI required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CodeAny", email = "dev@codeany.ai" },
]
keywords = ["agent", "sdk", "claude", "anthropic", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
all = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/codeany-ai/open-agent-sdk-python"
Repository = "https://github.com/codeany-ai/open-agent-sdk-python"
Issues = "https://github.com/codeany-ai/open-agent-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
